gitops/core/apps/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: draw
  namespace: default
spec:
  parentRefs:
    - name: envoy-https
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - "draw.juancarlosvaldes.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: draw-app
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wiki
  namespace: default
spec:
  parentRefs:
    - name: envoy-https
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - "wiki.juancarlosvaldes.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: wiki-app
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flappy
  namespace: default
spec:
  parentRefs:
    - name: envoy-https
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - "flappy.juancarlosvaldes.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: flappy
          port: 80
          weight: 1
